# C-Plus-Plus

Cpp_Class/: CMakeLists.txt
Cpp_Class/class_and_dynamic_allocation/: CMakeLists.txt  README.md  bad-string-error-record.md  bad-string.cpp  bad-string.h  test-bad-string.cpp
Cpp_Class/object_and_class/: CMakeLists.txt  Cpp_Class.cpp  Cpp_Class.h  review.md
Cpp_Class/use_class/: README.md
Cpp_Class/use_class/practice/: CMakeLists.txt  ERROR_Record.md  exercise.cpp  exercise.h  main.cpp  operator-function-demostration.cpp  operator-function-demostration.h  review-5-guess.cpp
